corrected spacing between elements and alinment of subcontainer box

--- a/projects/Animal-Trading-Cards/styles.css
+++ b/projects/Animal-Trading-Cards/styles.css
@@ -1,4 +1,8 @@
 /* add your CSS here */
+body{
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 .container{
   margin: auto 20%;
   width:50%;
@@ -8,16 +12,17 @@
   background-color:#f4f4f4;
 }
 
-  #center{
-    margin-left:5%;
+  .center{
+    margin-left:15%;
 
   }
 
     .subContainer{
-      border: 1px solid black;
+      border: 1px solid #cacaca;
       /*margin-left:2%;*/
-      margin: auto 20%;
-      width:80%;
+      margin: 5% 20%;
+      padding:2%;
+      width:66%;
       position:relative;
       right:20%;
 
